2003-07-18  Jonathan Blandford  <jrb@gnome.org>

	* main.c: Add a check to confirm that the AT's are installed.  Add
	a warning message if they are not.  Change widget naming scheme.

	* at-enable-dialog.glade: Change widget naming scheme.

2003-07-16  Dennis Cranston <dennis_cranston at yahoo com>

	* at-enable-dialog.glade:  Make close the default button.

2003-07-16  Dennis Cranston <dennis_cranston at yahoo com>

	* at-enable-dialog.glade:  Adjust widget padding and remove
	separator per HIG.

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-07-01  Daniel Baeyens <daniel.baeyens@hispalinux.es>
	* capplets/accessibility/at-properties/at-enable-dialog.glade:
	"Assistive" is misspelled.