@@ -1,3 +1,8 @@
+Fri Aug  1 14:29:12 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-mouse-properties.c (setup_dialog): remove markup from
+	translated strings, #118801.
+
 Fri Aug  1 13:06:04 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-mouse-properties.c (create_dialog): add support for
